@@ -1,3 +1,7 @@
+2021-12-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Remove unused continuous integration artifact and badge
+
 2021-07-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/NEWS.Rd: Correct some NEWS.Rd formatting
